--- a/style.scss
+++ b/style.scss
@@ -1,46 +1,66 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   text-align: center;
   display: grid;
   place-content: center;
-  background-color: black;
+  //   background: linear-gradient(to right, rgb(78, 84, 200), rgb(143, 148, 251));
+  font-family: Nunito;
+  background: linear-gradient(to right, rgb(253, 200, 48), rgb(243, 115, 53));
 }
 #title {
-  font-size: 5rem;
+  margin-top: 10px;
+  letter-spacing: 3px;
+  font-size: 4rem;
   background: #8f5ef1;
   background: -webkit-linear-gradient(
     to right,
-    #8f5ef1 66%,
-    #ff52dc 100%,
-    #ff96b6 30%
+    rgb(0, 180, 219),
+    rgb(0, 131, 176)
   );
   background: -moz-linear-gradient(
     to right,
-    #8f5ef1 66%,
-    #ff52dc 100%,
-    #ff96b6 30%
+    rgb(0, 180, 219),
+    rgb(0, 131, 176)
   );
-  background: linear-gradient(to right, #8f5ef1 66%, #ff52dc 100%, #ff96b6 30%);
+  background: linear-gradient(to right, rgb(0, 180, 219), rgb(0, 131, 176));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  @media (max-width: 450px) {
+    font-size: 2rem;
+  }
 }
+
 #chose {
   color: white;
-
+  margin: 5px 0;
   & span {
-    color: #8f5ef1;
+    font-weight: bold;
+    color: #f9ff21;
   }
 }
 #output {
   margin-bottom: 10px;
 }
 #details {
-  width: 500px;
-  background-color: salmon;
+  overflow: hidden;
+  border-radius: 10px;
+  text-align: justify;
+  max-width: 420px;
+  width: 100%;
+
+  background-color: #002651;
+  color: #28c7fa;
+
   & > * {
     margin: 0;
   }
   h1 {
-    font: size 3rem;
+    font: size 2rem;
+    text-align: center;
   }
   img {
     object-fit: cover;
@@ -58,9 +78,75 @@ body {
     }
   }
   p {
-    font-size: 2rem;
+    padding: 0 0.5rem 0 4rem;
+    font-size: 1.2rem;
+    margin-bottom: 3px;
     & span {
+      color: whitesmoke;
       font-weight: bold;
     }
+    @media (max-width: 450px) {
+      padding: 0 0.5rem 0 2rem;
+    }
+  }
+}
+//! select
+select {
+  display: block;
+  font-size: 16px;
+  font-family: sans-serif;
+  font-weight: 700;
+  color: #444;
+  line-height: 1.3;
+  padding: 0.6em 1.4em 0.5em 0.8em;
+  width: 100%;
+  max-width: 100%; /* useful when width is set to anything other than 100% */
+  box-sizing: border-box;
+  margin: 0;
+  border: 1px solid #aaa;
+  box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+  border-radius: 0.5em;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  /* note: bg image below uses 2 urls. The first is an svg data uri for the arrow icon, and the second is the gradient. 
+          for the icon, if you want to change the color, be sure to use `%23` instead of `#`, since it's a url. You can also swap in a different svg icon or an external image reference
+          
+        */
+  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E"),
+    linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
+  background-repeat: no-repeat, repeat;
+  /* arrow icon position (1em from the right, 50% vertical) , then gradient position*/
+  background-position: right 0.7em top 50%, 0 0;
+  /* icon size, then gradient */
+  background-size: 0.65em auto, 100%;
+
+  /* Hide arrow icon in IE browsers */
+  &::-ms-expand {
+    display: none;
+  }
+  /* Hover style */
+  &:hover {
+    border-color: #888;
+  }
+  /* Focus style */
+  &:focus {
+    border-color: #aaa;
+    /* It'd be nice to use -webkit-focus-ring-color here but it doesn't work on box-shadow */
+    box-shadow: 0 0 1px 3px rgba(59, 153, 252, 0.7);
+    box-shadow: 0 0 0 3px -moz-mac-focusring;
+    color: #222;
+    outline: none;
+  }
+
+  /* Set options to normal weight */
+  & option {
+    font-weight: normal;
+  }
+
+  &:disabled:hover,
+  .select-css[aria-disabled="true"] {
+    border-color: #aaa;
   }
 }
