--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,12 @@ body {
 }
 
 #title {
-  margin-top: 10px;
+  font-weight: bolder;
+  margin: 15px 0 20px 0;
   letter-spacing: 3px;
-  font-size: 4rem;
+  font-size: 5rem;
   background: #8f5ef1;
-  background: linear-gradient(to right, #00b4db, #0083b0);
+  background: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -46,7 +47,7 @@ body {
   overflow: hidden;
   border-radius: 10px;
   text-align: justify;
-  max-width: 420px;
+  max-width: 520px;
   width: 100%;
   background-color: #002651;
   color: #28c7fa;
@@ -57,8 +58,10 @@ body {
 }
 
 #details h1 {
+  color: whitesmoke;
   font: size 2rem;
   text-align: center;
+  margin: 10px 0;
 }
 
 #details img {
@@ -113,16 +116,14 @@ select {
   border-radius: 0.5em;
   appearance: none;
   background-color: #fff;
-  /* note: bg image below uses 2 urls. The first is an svg data uri for the arrow icon, and the second is the gradient. 
-          for the icon, if you want to change the color, be sure to use `%23` instead of `#`, since it's a url. You can also swap in a different svg icon or an external image reference
-          
-        */
-  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E"), linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
+  color: blueviolet;
+  letter-spacing: 1px;
+  background-image: url("/img/down-arrow-svgrepo-com.svg"), linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
   background-repeat: no-repeat, repeat;
   /* arrow icon position (1em from the right, 50% vertical) , then gradient position*/
   background-position: right 0.7em top 50%, 0 0;
   /* icon size, then gradient */
-  background-size: 0.65em auto, 100%;
+  background-size: 1em auto, 100%;
   /* Hide arrow icon in IE browsers */
   /* Hover style */
   /* Focus style */
@@ -153,5 +154,15 @@ select option {
 select:disabled:hover,
 select .select-css[aria-disabled="true"] {
   border-color: #aaa;
+}
+
+footer {
+  margin: 20px 0;
+}
+
+footer a {
+  text-decoration: none;
+  color: whitesmoke;
+  font-weight: bold;
 }
 /*# sourceMappingURL=style.css.map */
